--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
         <div class="container nav">
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav-list__item"><a href="/" class="nav-list__link"><span class="nav-list__item-text">Home</span></a></li>
-                <li class="nav-list__item"><a href="/" class="nav-list__link"><span class="nav-list__item-text">Boxes</span></a></li>
+                    <li class="nav-list__item"><a href="/" class="nav-list__link">Home</a></li>
+                <li class="nav-list__item"><a href="/" class="nav-list__link">Boxes</a></li>
             </ul>
                 <a href="/" class="nav__logo">
                     <picture class="nav-logo__picture">
@@ -21,30 +21,31 @@
                 <img src="./images/logo1.png" srcset="./images/logo1.png 1x, ./images/logo2.png 2x" alt="logo" class="nav-logo__img">
                 </a>
                 <ul class="nav__list">
-                    <li class="nav-list__item"><a href="/" class="nav-list__item-link"><span class="nav-list__item-text">About</span></a></li>
-                <li class="nav-list__item"><a href="/" class="nav-list__item-link"><span class="nav-list__item-text">Account</span></a></li>
+                    <li class="nav-list__item"><a href="/" class="nav-list__item-link">About</a></li>
+                <li class="nav-list__item"><a href="/" class="nav-list__item-link">Account</a></li>
             </ul>
             </nav>
-            <button class="menu-open">Open</button>
-            <button class="menu-close is-hidden">Close</button>
+            <button class="menu-open"><span>Open</span></button>
+            <button class="menu-close is-hidden"><span>Close</span></button>
         </div>
         <div class="nav-menu is-hidden">
             <div class="container">
                 <nav class="nav-menu__modal">
                     <ul class="nav-menu__list">
-                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link"><span class="nav-menu__item-text">Home</span></a></li>
-                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link"><span class="nav-menu__item-text">What's inside</span></a></li>
-                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link"><span class="nav-menu__item-text">Kiwi eco box</span></a></li>
-                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link"><span class="nav-menu__item-text">About</span></a></li>
-                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link"><span class="nav-menu__item-text">Account</span></a></li>
+                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link">Home</li>
+                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link">What's inside</a></li>
+                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link">Kiwi eco box</a></li>
+                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link">About</a></li>
+                        <li class="nav-menu__list-item"><a href="/" class="nav-menu__item-link">Account</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
     <main>
-        <section class="hero"><h1></h1>
-        <h2 class="hero-title"></h2>
+        <section class="hero">
+            <h1 class="hero-title">Everything You Need </h1>
+        <h2 class="hero-title-smaller">to Start Living Zero-Waste</h2>
         <ul class="hero-list">
             <li class="hero-list__item">
                 <div class="hero-list__absolute">
@@ -85,18 +86,304 @@
                 </picture>
                 <img src="./images/box-goodies1.png" srcset="./images/box-goodies1.png 1x, ./images/box-goodies2.png 2x" alt="box with goodies" class="hero__main-img">
                 </div>
-                <button type="button" class="hero__button">Start now</button>
+                <button type="button" class="hero__button"><span>Start now</span></button>
     </section>
-        <section class="works"></section>
-        <section class="month"></section>
-        <section class="mission"></section>
-        <section class="recent"></section>
-        <section class="blog"></section>
-        <section class="inbox"></section>
-        <section class="clients"></section>
-        <section class="contacts"></section>
+        <section class="works"><h2 class="works-title">How it Works</h2>
+        <ul class="works-list">
+            <li class="works-list__item">
+                <div class="works-list__absolute">
+                <picture class="works-list__item-picture">
+                    <source srcset="./images/works1-1.png 1x, ./images/works1-2.png 2x" class="works-list__item-source">
+                </picture>
+                <img src="./images/works1-1.png" srcset="./images/works1-1.png 1x, ./images/works1-2.png 2x" alt="girl with laptop" class="works-list__item-img">
+                <h3 class="works-list__item-title">Join the movement</h3>
+                <p class="works-list__item-text">Get started by signing up for monthly subscription. We bring you an easy way to start your zero-waste journey</p>
+                </div>
+            </li>
+            <li class="works-list__item">
+                <div class="works-list__absolute">
+                <picture class="works-list__item-picture">
+                    <source srcset="./images/works2-1.png 1x, ./images/works2-2.png 2x" class="works-list__item-source">
+                </picture>
+                <img src="./images/works2-1.png" srcset="./images/works2-1.png 1x, ./images/works2-2.png 2x" alt="gift" class="works-list__item-img">
+                <h3 class="works-list__item-title">Get Your Box </h3>
+                <p class="works-list__item-text">Every month receive your box with essential products, but plastic free and safe for the environment</p>
+                </div>
+            </li>
+            <li class="works-list__item">
+                <div class="works-list__absolute">
+                <picture class="works-list__item-picture">
+                    <source srcset="./images/works3-1.png 1x, ./images/works3-2.png 2x" class="works-list__item-source">
+                </picture>
+                <img src="./images/works3-1.png" srcset="./images/works3-1.png 1x, ./images/works3-2.png 2x" alt="world" class="works-list__item-img">
+                <h3 class="works-list__item-title">Make a Difference </h3>
+                <p class="works-list__item-text">Small steps can lead to bigger changes, and now you are the change. Let's build community of people who care</p>
+                </div>
+            </li>
+        </ul>
+                <button type="button" class="hero__button">Start now</button>
+            </section>
+        <section class="month">
+            <h2 class="month-title">Box of a month</h2>
+            <p class="month-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <ul class="month-list">
+            <li class="month-list__item">
+                <div class="month-list__picture-wrap">
+                    <picture class="month-list__item-picture">
+                        <source srcset=" ./images/month1-1.jpg 1x, ./images/month1-2.jpg 2x" class="month-list__item-source">
+                    </picture>
+                    <img src="./images/month1-1.jpg" srcset="./images/month1-1.jpg 1x, ./images/month1-2.jpg 2x" alt="unboxing1" class="month-list__item-img">
+                </div>
+            </li>
+            <li class="month-list__item">
+                <div class="month-list__picture-wrap">
+                    <picture class="month-list__item-picture">
+                        <source srcset=" ./images/month2-1.jpg 1x, ./images/month2-2.jpg 2x" class="month-list__item-source">
+                    </picture>
+                    <img src="./images/month2-1.jpg" srcset="./images/month2-1.jpg 1x, ./images/month2-2.jpg 2x" alt="unboxing2" class="month-list__item-img">
+                </div>
+            </li>
+        </ul>
+        <button type="button" class="month-button">See what's inside</button>
+    </section>
+        <section class="mission">
+            <p class="mission-text">Our mission</p>
+        <h2 class="mission-title">We are here to help you live greener and more sustainably</h2>
+        <h3 class="mission-title-smaller">Small steps matter</h3>
+        <div class="mission__image-wrap">
+            <picture class="mission__picture">
+                <source class="mission__source">
+            </picture>
+            <img src="./images//feet1-1.png" srcset="./images/feet1-1.png 1x, ./images/feet1-2.png 2x" alt="feet" class="mission__img">
+        </div>
+    </section>
+        <section class="recent">
+            <p>Join the conversation an help us create a new world!</p>
+        <h3>Recent Posts</h3>
+        <ul class="recent-list">
+            <li class="recent-list__item">
+                <div class="recent-list__absolute">
+                <picture class="recent-list__item-picture">
+                    <source srcset="./images/recent1-1.jpg 1x, ./images/recent1-2.jpg 2x" class="recent-list__item-source">
+                </picture>
+                <img src="./images/recent1-1.jpg" srcset="./images/recent1-1.jpg 1x, ./images/recent1-2.jpg 2x" alt="honey bro" class="recent-list__item-img">
+                </div>
+            </li>
+            <li class="recent-list__item">
+                <div class="recent-list__absolute">
+                <picture class="recent-list__item-picture">
+                    <source srcset="./images/recent2-1.jpg 1x, ./images/recent1-2.jpg 2x" class="recent-list__item-source">
+                </picture>
+                <img src="./images/recent2-1.jpg" srcset="./images/recent2-1.jpg 1x, ./images/recent2-2.jpg 2x" alt="kiwi box" class="recent-list__item-img">
+                </div>
+            </li>
+            <li class="recent-list__item">
+                <div class="recent-list__absolute">
+                <picture class="recent-list__item-picture">
+                    <source srcset="./images/recent3-1.jpg 1x, ./images/recent1-2.jpg 2x" class="recent-list__item-source">
+                </picture>
+                <img src="./images/recent3-1.jpg" srcset="./images/recent3-1.jpg 1x, ./images/recent3-2.jpg 2x" alt="staying on hands" class="recent-list__item-img">
+                </div>
+            </li>
+            <li class="recent-list__item">
+                <div class="recent-list__absolute">
+                <picture class="recent-list__item-picture">
+                    <source srcset="./images/recent4-1.jpg 1x, ./images/recent1-2.jpg 2x" class="recent-list__item-source">
+                </picture>
+                <img src="./images/recent4-1.jpg" srcset="./images/recent4-1.jpg 1x, ./images/recent4-2.jpg 2x" alt="thank you" class="recent-list__item-img">
+                </div>
+            </li>
+        </ul>
+    </section>
+        <section class="blog">
+            <h3 class="blog-title">What's new in blog?</h3>
+        <div class="blog__image-wrap">
+            <picture class="blog__picture">
+                <source class="blog__source" srcset="./images/blog1.jpg 1x, ./images/blog2.jpg 2x" class="blog__source">
+            </picture>
+            <img src="./images/blog1.jpg" srcset="./images/blog1.jpg 1x, ./images/blog2.jpg 2x" alt="flowers and box" class="blog__img">
+            <h4>Why KIWI Eco Box?</h4>
+            <p>Get started by signing up for monthly subscription. We bring you an easy way to start your zero-waste journey</p>
+            <button type="button"><span>Read more</span></button>
+        </div>
+    </section>
+        <section class="inbox">
+            <p class="inbox-text">Stay in the know</p>
+        <h3 class="inbox-title-smaller">Hear about the latest sneak peaks and spoilers</h3>
+            <div class="inbox__image-wrap">
+                <picture class="inbox__images-picture">
+            <source class="inbox__images-source" srcset="./images/sneak1.png 1x, ./images/sneak2.png 2x">
+        </picture>
+        <img src="./images/sneak1.png" srcset="./images/sneak1.png 1x, ./images/sneak2.png 2x" alt="box with goodies">
+    </div>
+    <h2 class="inbox-title">get CAUSEBOX delivered directly to your inbox!</h2>
+    <input type="email" placeholder="You email adress">
+    <button type="button"><span>Sign up</span></button>
+    <p>By clicking "sign up" you agree to receive emails from CAUSEBOX and accept our web terms of use and privacy and cookie policy</p>
+    </section>
+        <section class="clients"><p class="clients-text">What do our</p>
+        <h3 class="clients-title">clients say</h3>
+        <div class="clients-card"><svg>quotes</svg>
+        <div class="clients-card__image-wrap">
+            <picture class="clients-card__picture">
+            <source srcset="./images/client1.jpg 1x, ./images/client2.jpg 2x" class="clients-card__source">
+        </picture>
+        <img src="./images/client1.jpg" srcset="./images/client1.jpg 1x, ./images/client2.jpg 2x" alt="client"class="clients-card__img">
+    </div>
+        <h4 class="card-title">Jessica T.</h4>
+        <ul class="card-list">
+            <li class="card-list__item">
+                <svg>
+                    <use></use>
+                </svg>
+            </li>
+            <li class="card-list__item">
+                <svg>
+                    <use></use>
+                </svg>
+            </li>
+            <li class="card-list__item">
+                <svg>
+                    <use></use>
+                </svg>
+            </li>
+            <li class="card-list__item">
+                <svg>
+                    <use></use>
+                </svg>
+            </li>
+            <li class="card-list__item">
+                <svg>
+                    <use></use>
+                </svg>
+            </li>
+        </ul>
+        <div class="clients-card__text-wrap">
+            <p class="clients-card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
+        </div>
+        <ul class="clients-card__buttons-list">
+            <li class="buttons-list__item">
+                <button class="buttons-list__item-button">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </button>
+            </li>
+            <li class="buttons-list__item">
+                <button class="buttons-list__item-button">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </button>
+            </li>
+        </ul>
+        </div>
+    </section>
+        <section class="contacts">
+            <div class="contacts__image-wrap">
+                <a href="/" class="contacts__image-link">
+            <picture class="contacts__picture" class="contacts__picture">
+                <source srcset="./images/footlogo1.png 1x, ./images/footlogo2.png 2x" class="contacts__source">
+            </picture>
+        </a>
+    <img src="./images/footlogo1.png" srcset="./images/footlogo1.png 1x, ./images/footlogo2.png 2x" alt="logo" class="contacts__logo"></div>
+        <ul class="contacts-list">
+            <li class="contacts-list__item">
+                <a href="/" class="contacts-list__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list__item">
+                <a href="/" class="contacts-list__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list__item">
+                <a href="/" class="contacts-list__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list__item">
+                <a href="/" class="contacts-list__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list__item">
+                <a href="/" class="contacts-list__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list__item">
+                <a href="/" class="contacts-list__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list__item">
+                <a href="/" class="contacts-list__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list__item">
+                <a href="/" class="contacts-list__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+        <ul class="contacts-list2">
+            <li class="contacts-list2__item">
+                <a href="/" class="contacts-list2__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list2__item">
+                <a href="/" class="contacts-list2__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list2__item">
+                <a href="/" class="contacts-list2__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="contacts-list2__item">
+                <a href="/" class="contacts-list2__item-link">
+                    <svg>
+                        <use></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <p class="footer-year">Kiwi Eco Box © 2021</p>
+        <p class="footer-by">Development by SheepFish</p>
+        <svg>
+            <use></use>
+        </svg>
+</footer>
 
     <div class="backdrop">
         <div class="modal"></div>
